# virtual_elderly_centre

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: activities.py  dashboard.py  members.py  notifications.py  respite.py
app/services/: email.py  respite_scheduler.py  scheduler.py
app/templates/: base.html  dashboard.html  notifications.html
app/templates/activities/: detail.html  form.html  list.html
app/templates/members/: detail.html  form.html  list.html
app/templates/partials/: activity_detail.html  email_draft_detail.html  import_result.html  members_table.html  notification_toast.html  respite_day_detail.html  respite_slots.html
app/templates/respite/: form.html  list.html
scripts/: dummy_members.csv  gmail_oauth.py  seed_data.py
